--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Adan Rangel Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Power BI, and Python</p> <p> <a href="https://www.linkedin.com/in/adanruben">@adanruben</a> </p>
+						<p>Analytics: SQL, Python, Power BI & Tableau</p> <p> <a href="https://www.linkedin.com/in/adanruben">@adanruben</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -91,7 +91,7 @@
 									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Airbnb 2016.png" alt="" /></a>
 									<p>Tableau dashboard of 2016 Airbnb dataset that displayed revenue per rental size and location.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">Full Story</a></li>
+										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -99,35 +99,46 @@
 										<h2><a href="#">Automating Cyrpto Website Using API<br />
 										(Python)</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Crypto Website.jpg" alt="" /></a>
-									<p>Description of project to follow.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<!-- <article>
-									<header>
-										<h2><a href="#">Example Project<br />
-										(Upcoming)</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Description to Follow.</p>
+									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
+									<p>Project to Follow.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Example Project<br />
-										(Upcoming)</a></h2>
+										<h2><a href="#">Amazon Web Scraping (Python) <br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Description to follow.</p>
+									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
+									<p>Project to Follow.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
-								-->
+								<article>
+									<header>
+										<h2><a href="#">Data Cleaning (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
+									<p>Project to Follow.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Exploratory Data Analysis (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
+									<p>Project to Follow.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>
+							
 
 							</section>
 
