--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python)">Automated File Sorter in Folder Explorer<br />
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python).ipynb">Automated File Sorter in Folder Explorer<br />
 										(Python)</a></h2>
 									</header>
-									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python)" class="image fit"><img src="images/Automated File Sorter in Folder Explorer Image.jpg" alt="" /></a>
-									<p>File sorter that organizes files by file type into user-designated folders using Python (includes nested IF statements and loops).</p>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python).ipynb" class="image fit"><img src="images/Automated File Sorter in Folder Explorer Image.jpg" alt="" /></a>
+									<p>File sorter that organizes files by file type into user-designated folders using Python--nested IF statements and loops.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python)" class="button">View Project</a></li>
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python)">BMI Calculator<br />
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb">BMI Calculator<br />
 											(Python)</a></h2>
 									</header>
-									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python)" class="image fit"><img src="images/BMI Calculator Image.jpg" alt="" /></a>
-									<p>BMI Calculator that takes user input to provide BMI and Health Category Classification using Python (includes inputs, data types, and IF statements).</p>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb" class="image fit"><img src="images/BMI Calculator Image.jpg" alt="" /></a>
+									<p>BMI Calculator that takes user input to provide BMI and Health Category Classification using Python--inputs, data types, and IF statements.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python)" class="button">View Project</a></li>
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -92,6 +92,28 @@
 									<p>Tableau dashboard of 2016 Airbnb dataset that displayed revenue per rental size and location.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
+									</ul>
+								</article>						
+								<article>
+									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb">Data Cleaning of Customer Contact List (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="image fit"><img src="images/Data Cleaning in Pandas.png" alt="" /></a>
+									<p>Cleaning messy customer contact log through Pandas funtions including drop, strip, lambda, replace, fill and for loops</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb">EDA of World Population (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="image fit"><img src="images/world population3.png" alt="" /></a>
+									<p>Exploration of World Population data through high level overviews including tables, heat map, line plots, box plot, and filters.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -108,28 +130,6 @@
 								<article>
 									<header>
 										<h2><a href="#">Amazon Web Scraping (Python) <br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
-									<p>Project to Follow.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Data Cleaning (Pandas Library)<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
-									<p>Project to Follow.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Exploratory Data Analysis (Pandas Library)<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
