--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb">Data Cleaning of Customer Contact List (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="image fit"><img src="images/customerloginfo.jpg" alt="" /></a>
+									<p>Cleaning messy customer contact log through Pandas using drop, strip, lambda, replace, fill and for loops</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb">EDA of World Population (Pandas Library)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="image fit"><img src="images/world population3.png" alt="" /></a>
+									<p>Exploration of World Population data through high level overviews including tables, heat map, line plots, box plot, and filters.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python).ipynb">Automated File Sorter in Folder Explorer<br />
 										(Python)</a></h2>
 									</header>
@@ -82,40 +104,19 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb" class="button">View Project</a></li>
 									</ul>
-								</article>
+								</article>					
+
 								<article>
 									<header>
 										<h2><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Airbnb Dashboard<br />
 										(Tableau)</a></h2>
 									</header>
 									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Airbnb 2016.png" alt="" /></a>
-									<p>Tableau dashboard of 2016 Airbnb dataset that displayed revenue per rental size and location.</p>
+									<p>Tableau dashboard of 2016 Airbnb dataset that displays revenue per rental size and location.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
 									</ul>
-								</article>						
-								<article>
-									<header>
-										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb">Data Cleaning of Customer Contact List (Pandas Library)<br />
-										</a></h2>
-									</header>
-									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="image fit"><img src="images/Data Cleaning in Pandas.png" alt="" /></a>
-									<p>Cleaning messy customer contact log through Pandas funtions including drop, strip, lambda, replace, fill and for loops</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb">EDA of World Population (Pandas Library)<br />
-										</a></h2>
-									</header>
-									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="image fit"><img src="images/world population3.png" alt="" /></a>
-									<p>Exploration of World Population data through high level overviews including tables, heat map, line plots, box plot, and filters.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/EDM%20in%20Pandas%20(World%20Population).ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
+								</article>	
 								<article>
 									<header>
 										<h2><a href="#">Automating Cyrpto Website Using API<br />
