--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/eBay%20Web%20Scraper%20(Python).ipynb">eBay Web Scraping (Python) <br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/eBay%20Web%20Scraper%20(Python).ipynb" class="image fit"><img src="images/ebaywebscrapping.jpg" alt="" /></a>
+									<p>Automized, timestamped, and logged product price to csv file through python using Beautiful Soup, requests, time, and datetime.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/eBay%20Web%20Scraper%20(Python).ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Automatic%20File%20Sorter%20in%20File%20Explorer%20(Python).ipynb">Automated File Sorter in Folder Explorer<br />
 										(Python)</a></h2>
 									</header>
@@ -105,7 +116,6 @@
 										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>					
-
 								<article>
 									<header>
 										<h2><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Airbnb Dashboard<br />
@@ -128,17 +138,7 @@
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<h2><a href="#">Amazon Web Scraping (Python) <br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/coming soon2.png" alt="" /></a>
-									<p>Project to Follow.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
+								
 							
 
 							</section>
