--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Largest Countries V1.png" alt="" /></a>
-									<p>Coming Soon: Project available 07.17.17 </p>
+									<p>Coming Soon</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
