--- a/index.html
+++ b/index.html
@@ -63,6 +63,28 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Airbnb Dashboard<br />
+										(Tableau)</a></h2>
+									</header>
+									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Airbnb 2016.png" alt="" /></a>
+									<p>Tableau dashboard of 2016 Airbnb dataset that displays revenue per rental size and location.</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
+									</ul>
+								</article>	
+								<article>
+									<header>
+										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Bike%20Sales%20Dashboard.xlsx">Bike Sales Dashboard (Excel)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="image fit"><img src="images/Bike Sales.png" alt="" /></a>
+									<p>Data cleaning and visualization of Bike Sales through Excel.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/Data%20Cleaning%20in%20Pandas%20(Contact%20List).ipynb">Data Cleaning of Customer Contact List (Python|Pandas)<br />
 										</a></h2>
 									</header>
@@ -127,17 +149,6 @@
 										<li><a href="https://github.com/adanrangel/PortfolioProjects/blob/main/BMI%20Calculator%20(Python).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>					
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Airbnb Dashboard<br />
-										(Tableau)</a></h2>
-									</header>
-									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Airbnb 2016.png" alt="" /></a>
-									<p>Tableau dashboard of 2016 Airbnb dataset that displays revenue per rental size and location.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
-									</ul>
-								</article>	
 								<article>
 									<header>
 										<h2><a href="#">USA Largest Companies: Web Scraping & Data Visualization (Python|Pandas)<br />
