--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</a></h2>
 								<p>Power BI visual of US Census Bureau data on construction spending dating back to 2012.</p>
 							</header>
-							<a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="image main"><img src="images/seattle construction tower crane.jpg" alt="" /></a>
+							<a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="image main"><img src="images/PBI Construction Spending.png" alt="" /></a>
 							<ul class="actions special">
 								<li><a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="button large">View Project</a></li>
 							</ul>
@@ -68,7 +68,7 @@
 										<h2><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link">Airbnb Dashboard<br />
 										(Tableau)</a></h2>
 									</header>
-									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/Airbnb 2016.png" alt="" /></a>
+									<a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/tableaAIRBNB.png" alt="" /></a>
 									<p>Tableau dashboard of 2016 Airbnb dataset that displays revenue per rental size and location.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/views/AirbnbFullProject_16888444393890/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">View Project</a></li>
