--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</a></h2>
 								<p>Power BI visual of US Census Bureau data on construction spending dating back to 2012.</p>
 							</header>
-							<a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="image main"><img src="images/PBI Construction Spending.png" alt="" /></a>
+							<a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="image main"><img src="images/V1PBI Construction Spending.png" alt="" /></a>
 							<ul class="actions special">
 								<li><a href="https://app.powerbi.com/groups/me/reports/b50717b0-a74d-4263-903f-40e6c2887108/ReportSection?experience=power-bi" class="button large">View Project</a></li>
 							</ul>
